# disnake-bot-lite-template

./: .gitignore  ENVIROMENT.md  ENVIRONMENT.md  LICENSE  README.md  docker-compose-dev.yaml  env.template
bot/: Dockerfile  main.py  prestart.sh  pyproject.toml  start.sh
bot/cogs/: my_cog.py
bot/core/: config.py  database.py  decorators.py  errors.py  logging.py  utils.py
bot/repositories/: my_repo.py
