[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "TheAihopGG",email = "theaihopgg@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "disnake (>=2.11.0,<3.0.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "debugpy (>=1.8.20,<2.0.0)",
    "yoyo-migrations (>=9.0.0,<10.0.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
